--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "module-alias": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
     "scss": "^0.2.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -47,6 +48,11 @@
     ]
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0"
+    "@types/axios": "^0.14.0",
+    "@types/bootstrap": "^5.2.10",
+    "webpack-cli": "^5.1.4"
+  },
+  "_moduleAliases": {
+    "@": "build"
   }
 }
