--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0",
     "scss": "^0.2.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "webpack --mode production",
+    "build:dev": "webpack --mode development",
+    "build:start": "cd dist && PORT=3000 npx serve",
+    "start": "webpack serve --open --mode development",
+    "start:live": "webpack serve --open --mode development --live-reload --hot"
   },
   "eslintConfig": {
     "extends": [
@@ -50,7 +53,10 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/bootstrap": "^5.2.10",
-    "webpack-cli": "^5.1.4"
+    "babel-loader": "^9.1.3",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "_moduleAliases": {
     "@": "build"
