--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.4.4",
     "module-alias": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
