--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "build:dev": "webpack --mode development",
     "build:start": "cd dist && PORT=3000 npx serve",
     "start": "webpack serve --open --mode development",
-    "start:live": "webpack serve --open --mode development --live-reload --hot"
+    "start:live": "webpack serve --open --mode development --live-reload --hot",
+    "lint": "npx eslint ./src",
+    "fix": "npx eslint ./src --fix",
+    "format": "npx prettier ./src --write"
   },
   "eslintConfig": {
     "extends": [
@@ -56,7 +59,11 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/bootstrap": "^5.2.10",
+    "@typescript-eslint/parser": "^7.0.2",
     "babel-loader": "^9.1.3",
+    "eslint": "^8.56.0",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
