--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.0.1",
     "module-alias": "^2.2.3",
     "moment": "^2.30.1",
     "react": "^18.2.0",
