--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.4.5",
     "dotenv-webpack": "^8.0.1",
     "module-alias": "^2.2.3",
-    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
