--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "start:live": "webpack serve --open --mode development --live-reload --hot",
     "lint": "npx eslint ./src",
     "fix": "npx eslint ./src --fix",
-    "format": "npx prettier ./src --write"
+    "format": "npx prettier ./src --write",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": [
@@ -63,6 +64,8 @@
     "@typescript-eslint/parser": "^7.0.2",
     "babel-loader": "^9.1.3",
     "eslint": "^8.56.0",
+    "jest": "^27.5.1",
+    "jest-dom": "^4.0.0",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
     "webpack": "^5.90.1",
@@ -71,5 +74,12 @@
   },
   "_moduleAliases": {
     "@": "build"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "identity-obj-proxy",
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "testEnvironment": "jsdom"
   }
 }
